--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
               <span>Catalog Associate (Jan 2022 — Present)</span>
 
               <p class="timeline-text">
-                •	Enhanced Amazon Catalog quality across marketplaces (MPs) by validating and auditing regenerated content using the Large Language Model (LLM) AI (Claude) for ASIN/products, ensuring customer acceptability and quality.<br>
+                •	Contributed to enhance Amazon Catalog quality across marketplaces (MPs) by validating and auditing regenerated content using the Large Language Model (LLM) AI (Claude) for ASIN/products, ensuring customer acceptability and quality.<br>
                 •	Delivered stakeholder and seller partner requirements by creating a centralized source in the Unified Metadata Platform (UMP), identifying valid values and synonyms for product types and attribute pairs across 7 global marketplaces.<br>
                 •	Generated and implemented process improvement (PI) ideas using JavaScript that helped teams with 0.67 FTE savings & reducing error rates by 1.2% in quality.<br>
                 •	Automated the tedious task of manual productivity calculation using python script with the help of GenAI, saving POC time by 40 minutes.<br>
@@ -796,7 +796,7 @@
               <span>Catalog Associate (Jan 2022 — Present)</span>
 
               <p class="timeline-text">
-                •	Enhanced Amazon Catalog quality across marketplaces (MPs) by validating and auditing regenerated content using the Large Language Model (LLM) AI (Claude) for ASIN/products, ensuring customer acceptability and quality.<br>
+                •	Contributed to enhance Amazon Catalog quality across marketplaces (MPs) by validating and auditing regenerated content using the Large Language Model (LLM) AI (Claude) for ASIN/products, ensuring customer acceptability and quality.<br>
                 •	Delivered stakeholder and seller partner requirements by creating a centralized source in the Unified Metadata Platform (UMP), identifying valid values and synonyms for product types and attribute pairs across 7 global marketplaces.<br>
                 •	Generated and implemented process improvement (PI) ideas using JavaScript that helped teams with 0.67 FTE savings & reducing error rates by 1.2% in quality.<br>
                 •	Automated the tedious task of manual productivity calculation using python script with the help of GenAI, saving POC time by 40 minutes.<br>
