--- a/index.html
+++ b/index.html
@@ -389,12 +389,13 @@
               <p class="timeline-text">
                 •	Contributed to enhance Amazon Catalog quality across marketplaces (MPs) by validating and auditing regenerated content using the Large Language Model (LLM) AI (Claude) for ASIN/products, ensuring customer acceptability and quality.<br>
                 •	Delivered stakeholder and seller partner requirements by creating a centralized source in the Unified Metadata Platform (UMP), identifying valid values and synonyms for product types and attribute pairs across 7 global marketplaces.<br>
-                •	Generated and implemented process improvement (PI) ideas using JavaScript that helped teams with 0.67 FTE savings & reducing error rates by 1.2% in quality.<br>
-                •	Automated the tedious task of manual productivity calculation using python script with the help of GenAI, saving POC time by 40 minutes.<br>
-                •	Led a team of 9 members, providing training and mentorship for a critical task in the Spanish marketplace and achieved a 99.02% quality result, surpassing the threshold of 98%.<br>
-                •	Prepared a Power BI dashboard for 5 managers to get better insights of associate’s error data, saving time of manual pivot table analysis.<br>
-                •	Provided training and mentoring to 14 associates with a feedback score of 9.3 out of 10. <br>
-                •	Assisted 3 teams and managers by developing basic trackers, reports, and dashboards, ensuring improved visibility and efficient management of associate’s leaves, work allocations, and queries.<br>
+                •	Implemented process improvement (PI) ideas using JavaScript & GenAI that helped teams with 1.27 FTE savings & reducing error rates by 1.2% in quality.<br>
+                •	Automated tedious task of manual productivity calculation using python script with the help of GenAI, saving POC time by 70 minutes.<br>
+                •	Performed Value Stream Mapping (VSM) to optimize BizOps and workflows steps for saving time and generating process improvement (PI) ideas.<br>
+                •	Created dynamic dashboards & reports in Power BI after data cleaning of raw data to understand complex data related to productivity & errors.<br>
+                •	Led a team of 9 members, delivered quality result of 99.02% against the threshold of 98% for a new project under EnD team.<br>
+                •	Provided training and mentoring to 14 associates on multiple task types, achieving a feedback score of 9.3 out of 10.<br>
+                •	Assisted teams and managers by developing trackers, reports, and dashboards, ensuring improved visibility and efficient management of associate’s leaves, work allocations, and queries.<br>
               </p>
 
             </li>
@@ -407,7 +408,7 @@
 
               <p class="timeline-text">
                 •	Led a team of 5 associate members, and facilitated 9 International Exchanges under United Nation’s Sustainable Development Goals (SDGs) projects and internships.<br>
-                •	Developed International Relations (IR) with 6 countries to manage seamless internal communication on projects and deliver better experience to our interns.<br>
+                •	Developed International Relations (IR's) with 6 countries for better project management to manage seamless internal communication on projects and deliver better experience to our interns.<br>
                 •	Increased the number of Exchange Participants (EP)/Interns by 80%, highest in single term for International Exchanges/Internships.<br>
                 •	Planned and executed strategies to raise brand and 17 SDGs awareness through marketing channels, activities, organizing events like   Youth Speak Forum and World’s Largest Lesson.<br>
 
@@ -422,8 +423,8 @@
               <span>Freelancer (May 2019 — Dec 2021)</span>
 
               <p class="timeline-text">
-                •	Taught & Mentored 500+ students through doubt solving, personal assistance and content creation with an average rating of 9.7 out of 10.<br>
-                •	Collaborated with the sales & operations team and contributed to generate revenue of approximately 4 Lakhs.
+                • Taught & Mentored 500+ students through doubt solving, content creation and personal assistance with an average rating of 9.7 out of 10.<br>
+                •	Collaborated with Sales & Operations team for data management & analysis and contributed to generating revenue of approx. 4 Lakhs.
                 
               </p>
 
@@ -437,7 +438,7 @@
               <span>Global Volunteer, Foreign Internship (June 2018 — Aug 2018)</span>
 
               <p class="timeline-text">
-                •	Interned on the ‘ASPIRE to INSPIRE’ project under the United Nations, focused on Sustainable Development Goal 4: Quality Education, collaborated with Malaysian NGOs to promote student interest in STEM field through diverse events like science fairs, exhibitions, and competition.<br>
+                •	Interned on the ‘ASPIRE to INSPIRE’ project under the United Nations, focused on Sustainable Development Goal 4: Quality Education, promoting STEM interest in students through science fairs, exhibitions, and competitions.<br>
                 •	Facilitated and Empowered 400+ students with skills in Lego robotics, basic programming, interactive experiments, presentation skills and teamwork.<br>
                 •	Assisted and setup new operations for NGOs to get better reach through our activities and gets new collaboration with 3 organization that pledged to donate laptops and other microcontrollers to empower students learning.<br>
                 • Got opportunity to share one day experience on AIESEC India official instagram page through stories <a href= "https://www.instagram.com/s/aGlnaGxpZ2h0OjE3OTE1ODI3MTI2MTk5MjM3" target="_blank">story link</a>
