--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@
 
         <section class="about-text">
           <p>
-            A solution-oriented person who always strive to be the best in every task undertaken. My diverse professional & international experience across multiple organizations has enabled me to strengthen my skills in problem solving, taking ownership, and cultivating self-awareness. 
-            This journey has led me to deep dive into my capability and my interest in the analytics field. I explored, upskilled, and am now seeking for better opportunities in the business analytics field.
+            A solution-oriented person who always strive to deliver best in every task. My diverse professional & international experience across multiple organizations has enabled me to strengthen my skills in problem solving, taking ownership, and cultivating self-awareness. 
+            This journey has led me to dive deep into my capabilities and my interest in the analytics field. I explored, upskilled, and am now seeking for better opportunities in the business analytics field.
           </p>
 
         </section>
