--- a/index.html
+++ b/index.html
@@ -393,9 +393,9 @@
                 •	Performed Value Stream Mapping (VSM) to optimize BizOps and workflows steps for saving time and generating process improvement (PI) ideas.<br>
                 •	Created dynamic dashboards & reports in Power BI after data cleaning of raw data to understand complex data related to productivity & errors.<br>
                 •	Led a team of 9 members, delivered quality result of 99.02% against the threshold of 98% for a new project under EnD team.<br>
-                •	Centralized stakeholder and seller partner requirements in the Unified Metadata Platform (UMP), identifying valid values and synonyms for product types and attributes across 7 global marketplaces..<br>
+                •	Centralized stakeholder's and seller partner requirements in the Unified Metadata Platform (UMP), identifying valid values and synonyms for product types and attributes across 7 global marketplaces.<br>
                 •	Provided training and mentoring to 14 associates on multiple task types, achieving a feedback score of 9.3 out of 10.<br>
-                •	Developed trackers, reports, and dashboards foe teams & managers to improve visibility and manage associates' leaves, work allocations, and queries efficiently.<br>
+                •	Developed trackers, reports, and dashboards for teams & managers to improve visibility and manage associates' leaves, work allocations, and queries efficiently.<br>
               </p>
 
             </li>
