--- a/index.html
+++ b/index.html
@@ -797,14 +797,15 @@
               <span>Catalog Associate (Jan 2022 — Present)</span>
 
               <p class="timeline-text">
-                •	Contributed to enhance Amazon Catalog quality across marketplaces (MPs) by validating and auditing regenerated content using the Large Language Model (LLM) AI (Claude) for ASIN/products, ensuring customer acceptability and quality.<br>
-                •	Delivered stakeholder and seller partner requirements by creating a centralized source in the Unified Metadata Platform (UMP), identifying valid values and synonyms for product types and attribute pairs across 7 global marketplaces.<br>
-                •	Generated and implemented process improvement (PI) ideas using JavaScript that helped teams with 0.67 FTE savings & reducing error rates by 1.2% in quality.<br>
-                •	Automated the tedious task of manual productivity calculation using python script with the help of GenAI, saving POC time by 40 minutes.<br>
-                •	Led a team of 9 members, providing training and mentorship for a critical task in the Spanish marketplace and achieved a 99.02% quality result, surpassing the threshold of 98%.<br>
-                •	Prepared a Power BI dashboard for 5 managers to get better insights of associate’s error data, saving time of manual pivot table analysis.<br>
-                •	Provided training and mentoring to 14 associates with a feedback score of 9.3 out of 10. <br>
-                •	Assisted 3 teams and managers by developing basic trackers, reports, and dashboards, ensuring improved visibility and efficient management of associate’s leaves, work allocations, and queries.<br>
+                •	Contributed to enhance Amazon Catalog quality across marketplaces (MPs) by validating the output content of Large Language Model (LLM) AI (Claude) for ASIN/products, ensuring customer acceptability and quality.<br>
+                •	Implemented process improvement (PI) ideas using JavaScript & GenAI that helped teams with 1.27 FTE savings & reducing error rates by 1.2% in quality.<br>
+                •	Automated tedious task of manual productivity calculation using python script with the help of GenAI, saving POC time by 70 minutes.<br>
+                •	Performed Value Stream Mapping (VSM) to optimize BizOps and workflows steps for saving time and generating process improvement (PI) ideas.<br>
+                •	Created dynamic dashboards & reports in Power BI after data cleaning of raw data to understand complex data related to productivity & errors.<br>
+                •	Led a team of 9 members, delivered quality result of 99.02% against the threshold of 98% for a new project under EnD team.<br>
+                •	Centralized stakeholder's and seller partner requirements in the Unified Metadata Platform (UMP), identifying valid values and synonyms for product types and attributes across 7 global marketplaces.<br>
+                •	Provided training and mentoring to 14 associates on multiple task types, achieving a feedback score of 9.3 out of 10.<br>
+                •	Developed trackers, reports, and dashboards for teams & managers to improve visibility and manage associates' leaves, work allocations, and queries efficiently.<br>
               </p>
 
             </li>
