--- a/index.html
+++ b/index.html
@@ -708,7 +708,7 @@
 
         <header class="header-with-download">
           <h2 class="h2 article-title">Resume</h2>
-          <a href="https://drive.google.com/file/d/1CE6utkLHqDqgfMsaVvDTPVxQAm9oToK9/view?usp=drivesdk" target ="_blank" >Download Resume 👈</a> 
+          <a href="https://drive.google.com/file/d/1qqJQMYrdCP2onkMMaAS3c_Jq8oRE_jMK/view?usp=sharing" target ="_blank" >Download Resume 👈</a> 
         </header>
 
         <section class="timeline">
