--- a/index.html
+++ b/index.html
@@ -384,16 +384,17 @@
 
               <h4 class="h4 timeline-item-title">AMAZON</h4>
 
-              <span>Catalog Associate (Jan 2022 — Present)</span>
+              <span>Catalog Associate (Jan 2022 — Present)<br>
+              Large Language Model(LLM) Team, Global Catalog Operations (GCO)</span>
 
               <p class="timeline-text">
+                •	Developed and maintained ETL processes to extract data from S3, transform it using SQL and Python Pandas, andvisualize insights through Quicksight dashboards to support data-driven decision making for stakeholders and teams.<br>
                 •	Contributed to enhance Amazon Catalog quality across marketplaces (MPs) by validating the output content of Large Language Model (LLM) AI (Claude) for ASIN/products, ensuring customer acceptability and quality.<br>
-                •	Implemented process improvement (PI) ideas using JavaScript & GenAI that helped teams with 1.27 FTE savings & reducing error rates by 1.2% in quality.<br>
+                •	Implemented process improvement (PI) ideas using JavaScript & GenAI that helped teams with 2.4 FTE savings & reducing error rates by 1.2% in quality.<br>
                 •	Automated tedious task of manual productivity calculation using python script with the help of GenAI, saving POC time by 70 minutes.<br>
                 •	Performed Value Stream Mapping (VSM) to optimize BizOps and workflows steps for saving time and generating process improvement (PI) ideas.<br>
                 •	Created dynamic dashboards & reports in Power BI after data cleaning of raw data to understand complex data related to productivity & errors.<br>
                 •	Led a team of 9 members, delivered quality result of 99.02% against the threshold of 98% for a new project under EnD team.<br>
-                •	Centralized stakeholder's and seller partner requirements in the Unified Metadata Platform (UMP), identifying valid values and synonyms for product types and attributes across 7 global marketplaces.<br>
                 •	Provided training and mentoring to 14 associates on multiple task types, achieving a feedback score of 9.3 out of 10.<br>
                 •	Developed trackers, reports, and dashboards for teams & managers to improve visibility and manage associates' leaves, work allocations, and queries efficiently.<br>
               </p>
