--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
 
               <h4 class="h4 timeline-item-title">AMAZON</h4>
 
-              <span>Catalog Associate (Jan 2022 — Present)<br>
+              <span>Catalog Analyst (Jan 2022 — Present)<br>
               Large Language Model(LLM) Team, Global Catalog Operations (GCO)</span>
 
               <p class="timeline-text">
@@ -709,7 +709,7 @@
 
         <header class="header-with-download">
           <h2 class="h2 article-title">Resume</h2>
-          <a href="https://drive.google.com/file/d/1awv2gHSTgJGZjPLWi5zOdosBnSbW2o3H/view?usp=sharing" target ="_blank" >Download Resume 👈</a> 
+          <a href="https://drive.google.com/file/d/1mNC9CbGB3potEJ-tIMuDDgJt8Ca1G3r6/view?usp=sharing" target ="_blank" >Download Resume 👈</a> 
         </header>
 
         <section class="timeline">
