--- a/index.html
+++ b/index.html
@@ -384,11 +384,11 @@
 
               <h4 class="h4 timeline-item-title">AMAZON</h4>
 
-              <span>Catalog Analyst (Jan 2022 — Present)<br>
+              <span>Catalog Associate (Jan 2022 — Present)<br>
               Large Language Model(LLM) Team, Global Catalog Operations (GCO)</span>
 
               <p class="timeline-text">
-                •	Developed and maintained ETL processes to extract data from S3, transform it using SQL and Python Pandas, andvisualize insights through Quicksight dashboards to support data-driven decision making for stakeholders and teams.<br>
+          
                 •	Contributed to enhance Amazon Catalog quality across marketplaces (MPs) by validating the output content of Large Language Model (LLM) AI (Claude) for ASIN/products, ensuring customer acceptability and quality.<br>
                 •	Implemented process improvement (PI) ideas using JavaScript & GenAI that helped teams with 2.4 FTE savings & reducing error rates by 1.2% in quality.<br>
                 •	Automated tedious task of manual productivity calculation using python script with the help of GenAI, saving POC time by 70 minutes.<br>
