--- a/index.html
+++ b/index.html
@@ -384,19 +384,19 @@
 
               <h4 class="h4 timeline-item-title">AMAZON</h4>
 
-              <span>Catalog Associate (Jan 2022 — Present)<br>
+              <span>Catalog Analyst (Jan 2022 — Present)<br>
               Large Language Model(LLM) Team, Global Catalog Operations (GCO)</span>
 
               <p class="timeline-text">
           
-                •	Contributed to enhance Amazon Catalog quality across marketplaces (MPs) by validating the output content of Large Language Model (LLM) AI (Claude) for ASIN/products, ensuring customer acceptability and quality.<br>
+                •	Developed and maintained ETL processes for data extraction from S3, transformation with SQL and Python, and visualization with Quicksight, enhancing data-driven decision-making insights for stakeholders and teams.<br>
+                •	Cross-functional responsibilities involve working with stakeholders, the technical team, and leaderships to manage team requirements efficiently.<br>
+                •	Led a team of 9 members, delivered quality result of 99.02% against the threshold of 98% for a new project under EnD team.<br>
+                •	Created dynamic dashboards and reports in Amazon QuickSight and Power BI, supporting 6 teams in analyzing productivity and error trends.
                 •	Implemented process improvement (PI) ideas using JavaScript & GenAI that helped teams with 2.4 FTE savings & reducing error rates by 1.2% in quality.<br>
                 •	Automated tedious task of manual productivity calculation using python script with the help of GenAI, saving POC time by 70 minutes.<br>
                 •	Performed Value Stream Mapping (VSM) to optimize BizOps and workflows steps for saving time and generating process improvement (PI) ideas.<br>
-                •	Created dynamic dashboards & reports in Power BI after data cleaning of raw data to understand complex data related to productivity & errors.<br>
-                •	Led a team of 9 members, delivered quality result of 99.02% against the threshold of 98% for a new project under EnD team.<br>
                 •	Provided training and mentoring to 14 associates on multiple task types, achieving a feedback score of 9.3 out of 10.<br>
-                •	Developed trackers, reports, and dashboards for teams & managers to improve visibility and manage associates' leaves, work allocations, and queries efficiently.<br>
               </p>
 
             </li>
@@ -421,10 +421,11 @@
 
               <h4 class="h4 timeline-item-title">VEDANTU</h4>
 
-              <span>Freelancer (May 2019 — Dec 2021)</span>
+              <span>Freelancer & Class Teacher (May 2019 — Mar 2022)</span>
 
               <p class="timeline-text">
                 • Taught & Mentored 500+ students through doubt solving, content creation and personal assistance with an average rating of 9.7 out of 10.<br>
+                • Created performance tracking & quality reports and dashboard for part time employees and presented in WBR.
                 •	Collaborated with Sales & Operations team for data management & analysis and contributed to generating revenue of approx. 4 Lakhs.
                 
               </p>
